Meeting 22.11. pom update