@@ -19,4 +19,21 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration combine.self="append">
+                    <useModulePath>false</useModulePath>
+                    <argLine>
+                        --add-opens scrabble.server/edu.unibw.se.scrabble.server.data=ALL-UNNAMED
+                    </argLine>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
